erDiagram
    %% ==========================================
    %% USERS
    %% ==========================================
    users {
        int       id PK
        string    name
        string    email
        boolean   is_dummy
        timestamp created_at
        timestamp updated_at
    }

    %% ==========================================
    %% GLOBAL ROLES
    %% ==========================================
    global_roles {
        int       id PK
        string    name
        text      description
        timestamp created_at
        timestamp updated_at
    }

    %% ==========================================
    %% USER-GLOBAL_ROLES (Junction Table)
    %% ==========================================
    user_global_roles {
        int       user_id PK, FK
        int       role_id PK, FK
        timestamp assigned_at
    }

    %% ==========================================
    %% GLOBAL_ROLE_CONFIGURATIONS
    %% ==========================================
    global_role_configurations {
        int       id PK
        int       global_role_id FK
        jsonb     configuration
        timestamp created_at
        timestamp updated_at
    }

    %% ==========================================
    %% USER_CONFIGURATIONS
    %% (User-level overrides)
    %% ==========================================
    user_configurations {
        int       id PK
        int       user_id FK
        jsonb     configuration
        timestamp created_at
        timestamp updated_at
    }

    %% ==========================================
    %% ORGANIZATIONS
    %% ==========================================
    organizations {
        int       id PK
        string    name
        timestamp created_at
        timestamp updated_at
    }

    %% ==========================================
    %% ORGANIZATION ROLES
    %% (e.g., Owner, Manager, Contributor)
    %% ==========================================
    organization_roles {
        int       id PK
        string    name
        text      description
        timestamp created_at
        timestamp updated_at
    }

    %% ==========================================
    %% ORGANIZATION_ROLE_CONFIGURATIONS
    %% (If each org-role needs its own config)
    %% ==========================================
    organization_role_configurations {
        int       id PK
        int       organization_id FK
        int       organization_role_id FK
        jsonb     configuration
        timestamp created_at
        timestamp updated_at
    }

    %% ==========================================
    %% ORGANIZATION_MEMBERS
    %% (Links user <-> org <-> org_role)
    %% ==========================================
    organization_members {
        int       user_id PK, FK
        int       organization_id PK, FK
        int       organization_role_id FK
        timestamp joined_at
    }


    %% ==========================================
    %% RELATIONSHIPS
    %% ==========================================

    %% -- Users <--> User Global Roles <--> Global Roles
    users ||--|{ user_global_roles : "has"
    global_roles ||--|{ user_global_roles : "belongs to"

    user_global_roles }|..|| users : "FK: user_id"
    user_global_roles }|..|| global_roles : "FK: role_id"

    %% -- Global Role Config <--> Global Roles
    global_roles ||--|{ global_role_configurations : "can have config"
    global_role_configurations }|..|| global_roles : "FK: global_role_id"

    %% -- Users <--> User Configurations
    users ||--|{ user_configurations : "has overrides"
    user_configurations }|..|| users : "FK: user_id"

    %% -- Organizations
    users ||..o{ organization_members : "can be member of many orgs"
    organizations ||..o{ organization_members : "has many members"
    organization_roles ||--|{ organization_members : "applies role"

    organization_members }|..|| users : "FK: user_id"
    organization_members }|..|| organizations : "FK: organization_id"
    organization_members }|..|| organization_roles : "FK: organization_role_id"

    %% -- Org Roles <--> Org Role Config
    organization_roles ||--|{ organization_role_configurations : "can have config"
    organizations ||..o{ organization_role_configurations : "config is for an org"

    organization_role_configurations }|..|| organization_roles : "FK: organization_role_id"
    organization_role_configurations }|..|| organizations : "FK: organization_id"
